// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Radio Controlled 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="Box-sc-1qu1edy-0 jlPsmj sc-fzoXWK bhiMMA"
    >
      <label
        class="ClickInputLabel-j2axnv-0 kemUmZ"
      >
        <input
          aria-checked="true"
          aria-invalid="false"
          aria-required="false"
          checked=""
          class="Radio__RadioInput-sc-82dpxx-1 lnYmAf sc-fzoXWK bhiMMA"
          id="radio-1"
          type="radio"
        />
        <div
          checked=""
          class="Radio__VisualRadio-sc-82dpxx-0 cMunLd"
        />
        <span
          class="sc-AxhCb hpmHVQ"
          color="currentColor"
          font-size="16px"
        >
           I am controlled and checked 
        </span>
      </label>
    </div>
    <div
      class="Box-sc-1qu1edy-0 jlPsmj sc-fzoXWK bhiMMA"
    >
      <label
        class="ClickInputLabel-j2axnv-0 kemUmZ"
      >
        <input
          aria-checked="false"
          aria-invalid="false"
          aria-required="false"
          class="Radio__RadioInput-sc-82dpxx-1 lnYmAf sc-fzoXWK bhiMMA"
          id="radio-2"
          type="radio"
        />
        <div
          class="Radio__VisualRadio-sc-82dpxx-0 cMunLd"
        />
        <span
          class="sc-AxhCb hpmHVQ"
          color="currentColor"
          font-size="16px"
        >
           I am controlled and unchecked 
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Radio Radio 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="Box-sc-1qu1edy-0 jlPsmj sc-fzoXWK bhiMMA"
    >
      <label
        class="ClickInputLabel-j2axnv-0 kemUmZ"
      >
        <input
          aria-invalid="false"
          aria-required="false"
          class="Radio__RadioInput-sc-82dpxx-1 lnYmAf sc-fzoXWK bhiMMA"
          id="radio"
          type="radio"
        />
        <div
          class="Radio__VisualRadio-sc-82dpxx-0 cMunLd"
        />
        <span
          class="sc-AxhCb hpmHVQ"
          color="currentColor"
          font-size="16px"
        >
           I am a radio button 
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Radio Set to defaultChecked 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="Box-sc-1qu1edy-0 jlPsmj sc-fzoXWK bhiMMA"
    >
      <label
        class="ClickInputLabel-j2axnv-0 kemUmZ"
      >
        <input
          aria-invalid="false"
          aria-required="false"
          checked=""
          class="Radio__RadioInput-sc-82dpxx-1 lnYmAf sc-fzoXWK bhiMMA"
          id="radio"
          type="radio"
        />
        <div
          class="Radio__VisualRadio-sc-82dpxx-0 cMunLd"
        />
        <span
          class="sc-AxhCb hpmHVQ"
          color="currentColor"
          font-size="16px"
        >
           I am checked by default 
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Radio Set to disabled 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="Box-sc-1qu1edy-0 jlPsmj sc-fzoXWK bhiMMA"
    >
      <label
        class="ClickInputLabel-j2axnv-0 kjxgat"
        disabled=""
      >
        <input
          aria-invalid="false"
          aria-required="false"
          class="Radio__RadioInput-sc-82dpxx-1 hBtCEn sc-fzoXWK bhiMMA"
          disabled=""
          id="radio-1"
          type="radio"
        />
        <div
          class="Radio__VisualRadio-sc-82dpxx-0 bCyppR"
          disabled=""
        />
        <span
          class="sc-AxhCb fTtmG"
          color="currentColor"
          disabled=""
          font-size="16px"
        >
           I am disabled 
        </span>
      </label>
    </div>
    <div
      class="Box-sc-1qu1edy-0 jlPsmj sc-fzoXWK bhiMMA"
    >
      <label
        class="ClickInputLabel-j2axnv-0 kjxgat"
        disabled=""
      >
        <input
          aria-checked="true"
          aria-invalid="false"
          aria-required="false"
          checked=""
          class="Radio__RadioInput-sc-82dpxx-1 hBtCEn sc-fzoXWK bhiMMA"
          disabled=""
          id="radio-2"
          type="radio"
        />
        <div
          checked=""
          class="Radio__VisualRadio-sc-82dpxx-0 bCyppR"
          disabled=""
        />
        <span
          class="sc-AxhCb fTtmG"
          color="currentColor"
          disabled=""
          font-size="16px"
        >
           I am disabled 
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Radio Set to error 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="Box-sc-1qu1edy-0 jlPsmj sc-fzoXWK bhiMMA"
    >
      <label
        class="ClickInputLabel-j2axnv-0 kemUmZ"
      >
        <input
          aria-invalid="true"
          aria-required="false"
          class="Radio__RadioInput-sc-82dpxx-1 iSoGgh sc-fzoXWK bhiMMA"
          id="radio"
          type="radio"
        />
        <div
          class="Radio__VisualRadio-sc-82dpxx-0 cMunLd"
        />
        <span
          class="sc-AxhCb hpmHVQ"
          color="currentColor"
          font-size="16px"
        >
           I am error 
        </span>
      </label>
    </div>
    <div
      class="Box-sc-1qu1edy-0 jlPsmj sc-fzoXWK bhiMMA"
    >
      <label
        class="ClickInputLabel-j2axnv-0 kemUmZ"
      >
        <input
          aria-invalid="true"
          aria-required="false"
          checked=""
          class="Radio__RadioInput-sc-82dpxx-1 iSoGgh sc-fzoXWK bhiMMA"
          id="radio"
          type="radio"
        />
        <div
          class="Radio__VisualRadio-sc-82dpxx-0 cMunLd"
        />
        <span
          class="sc-AxhCb hpmHVQ"
          color="currentColor"
          font-size="16px"
        >
           I am error 
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Radio Set to required 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="Box-sc-1qu1edy-0 jlPsmj sc-fzoXWK bhiMMA"
    >
      <label
        class="ClickInputLabel-j2axnv-0 kemUmZ"
      >
        <input
          aria-invalid="false"
          aria-required="true"
          class="Radio__RadioInput-sc-82dpxx-1 lnYmAf sc-fzoXWK bhiMMA"
          id="radio"
          required=""
          type="radio"
        />
        <div
          class="Radio__VisualRadio-sc-82dpxx-0 cMunLd"
        />
        <span
          class="sc-AxhCb hpmHVQ"
          color="currentColor"
          font-size="16px"
        >
           I am a radio button 
        </span>
      </label>
    </div>
  </div>
</div>
`;
